# wallet-live

./: Cargo.toml  README.md  compose.yml
migrations/: 20260606203354_create_assets.up.sql  20260606223829_create_users.up.sql  20260608120000_seed_assets.down.sql  20260608120000_seed_assets.up.sql
src/: app.rs  error.rs  main.rs  models.rs  repository.rs
src/auth/: admin.rs  user.rs
src/routes/: api.rs  frontend.rs
src/routes/fixtures/: bitcoin_asset.sql
templates/: assets.html  login.html
