[package]
name = "wallet-live"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = { version = "0.15.4", features = ["derive"] }
axum = { version = "0.8.8", features = [ "macros" ]}
axum-extra = { version = "0.12.5", features = ["cookie-signed"] }
color-eyre = "0.6.5"
dotenvy = "0.15.7"
jwt-simple = { version = "0.12.16", default-features = false, features = ["pure-rust"] }
password-auth = "1.0.0"
serde = { version = "1.0.228", features = [ "derive" ] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = [ "macros", "runtime-tokio", "postgres" ] }
thiserror = "2.0.18"
time = { version = "0.3.47", features = [ "serde" ] }
tokio = { version = "1.50.0", features = [ "rt-multi-thread", "macros" ]}
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

[dev-dependencies]
insta = { version = "1.47.2", features = ["json"] }
